Fixed Body overflow hidden error

--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,7 @@
 .header {
   background-color: rgba(13, 1, 1, 0.6);
 }
+
+body.noOverflow{
+  overflow: visible!important;
+}
